deployments/k8s/base/services/keycloak-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sso-gateway
  namespace: craftcloud-system
spec:
  entryPoints:
    - websecure
  tls:
    secretName: sso-tls
  routes:
    - match: Host(`sso.192.168.0.161.nip.io`) && PathPrefix(`/`) 
      kind: Rule
      services:
        - name: keycloak-service
          port: 8080
